app/assets/stylesheets/calendar.css.scss
/* ========= CALENDAR ======== */

$cal-gap: 40px;
$cal-head-height: 70px;
$cal-top-pad: 10px;
$hour-height: 4.1667%;
$hour-height-floored: 4%;
$cal-z: 10;

// Redundant styling—here just to change bg color
.calendar {
  width: 100%; height: 100%;
}
.cal {
  width: 100%;
  height: 100%;
}

/* ===== CALENDAR TABLE ===== */

.cal-table {
  position: relative;
  width: 100%;
  height: 100%;
  table-layout: fixed;
  td {
    vertical-align: top;
  }
}

.cal-day {
  position: relative;
  &.today {
    background-color: rgba($blue, 0.2);
  }
}

.cal-week .cal-day {
  // background-color: #fdfdfd;
  z-index: -5;
  border-right: 1pt solid #ddd;
}

.cal-multiday {
  position: absolute;
  width: 100%;
  height: 100%;
  top:0; left: 0;
}

.cal-month {
  tr {
    height: 20%;
    overflow: hidden;
  }
  .cal-day {
    position: relative;
    overflow: hidden;
    background-color: white;
    border-right: 1px solid #eee;
    border-bottom: 1px solid #eee;
  }
  /*
  tr:nth-child(odd) .cal-day:nth-child(odd), tr:nth-child(even) .cal-day:nth-child(even) {
    background-color: #fdfdfd;
  }
  */
}

.hour-day {
  height: $hour-height; // 100/24
  position: relative;
  z-index: -5;
  &:nth-child(even) {
    border-bottom: 1pt solid #eee;
  }
  &:nth-child(odd) {
    border-bottom: 1pt solid #fafafa;
  }
}

.hour-label {
  position: relative;
  top: -4px;
  left: 2px;
  z-index: -4;
  font-size: 8px;
  color: rgba(darken($blue, 30%), 0.6);
  text-shadow: 0 1px 1px rgba(white, 0.3);
}

#time-marker {
  position: absolute;
  width: 100%;
  left: 0;
  height: 0;
  color: rgba(darken($blue, 20%), 0.8);
  border-bottom: 1pt solid rgba(darken($blue, 20%), 0.8);
  @include box-shadow(0 1px 1px rgba(black, 0.4));
  z-index: 30;
}
#time-marker-img {
  $marker-img-height: 15px;
  position: relative;
  top: -2*$marker-img-height/3;
  height: $marker-img-height;
  left: 5px;
}

.day-tag {
  position: absolute;
  width: 100%;
  top: 25%;
  left: 0;
  text-align: center;
  z-index: -4;
  color: #ccc; 
  font-size: 130%;
  text-shadow: 0px 1px 1px rgba(white, 0.75);
  > p {
    margin: 0;
  }
  > .tag-date {
    font-size: 550%;
    line-height: 100%;
    font-weight: bold;
  }
}

.month-date {
  position: absolute;
  top: 35%; left: 0;
  width: 100%;
  font-size: 250%;
  line-height: 100%;
  text-align: center;
  color: #ccc; 
  text-shadow: 0px 1px 1px rgba(white, 0.75);
}

/* ===== CALENDAR EVENTS ===== */

.cal-events {
  position: relative;
}
.cal-month .cal-events {
  position: relative;
  top: 0;
  left: 0;
  overflow: hidden;
}

.cal-month-event {
  overflow: hidden;
  font-size: 10px;
  line-height: 15px;
  cursor: pointer;
  p {
    margin: 0;
    padding: 0 5px;
    height: 12px;
  }
}
$test-color: lighten(#0f91ec, 20%);
.cal-week-event {
  position: absolute;
  left: 0;
  z-index: $cal-z;
  border: 1pt solid transparent;
  background-color: rgba($test-color,0.7);
  @include transition(all 0.2s, opacity 0.5s);
  cursor: pointer;
  font-size: 8px;
  line-height: 12px;
  overflow: hidden;
  p {
    margin: 0 3px;
    &:first-child {
      margin-top: 3px;
    }
  }
  &:hover {
    border: 1pt solid #222;
    //@include box-shadow(0 0 3px rgba(0,0,0,0.8));
    background-color: rgba($test-color,1);
  }
}

.cal-week .cal-body {
  .event-hidden-org, .event-hidden-cat {
    opacity: 0;
  }
}

.cal-month  {
  .event-hidden-org, .event-hidden-cat {
    display: none;
  }
}

.cal-multiday {
  .event-hidden-org, .event-hidden-cat {
    display: none;
  }
}

.cal-multiday-event {
  position: absolute;
  height: $hour-height;
  padding-left: 2px;
  font-size: 10px;
  line-height: 150%;
  overflow: hidden;
  cursor: pointer;
  z-index: $cal-z + 5;
  @include transition(opacity 0.2s);
  $multiday-border: 1px solid #aaa;
  border: $multiday-border;
  border-top: none;
  &:first-child {
    border-top: $multiday-border;
  }
}

